--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,10 @@
 <resources>
 
     <style name="Theme.ITTelekom" parent="android:Theme.Material.Light.NoActionBar">
+
+        <item name="android:statusBarColor">@color/surface</item>
+        <item name="android:navigationBarColor">@color/container</item>
+
     </style>
 
 </resources>
