--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,9 @@
 
     <style name="Theme.ITTelekom" parent="android:Theme.Material.Light.NoActionBar">
 
+        <item name="android:statusBarColor">@color/surface</item>
+        <item name="android:navigationBarColor">@color/container</item>
+
     </style>
 
 </resources>
