--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.ITTelekom" parent="android:Theme.Material.Light.NoActionBar">
+    <style name="Theme.ITTelekom.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/loginSurface</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+        <item name="android:windowSplashScreenIconBackgroundColor">@color/loginPrimaryColor</item>
+        <item name="postSplashScreenTheme">@android:style/Theme.Material.Light.NoActionBar</item>
+    </style>
 
+    <style name="Theme.ITTelekom" parent="android:Theme.Material.Light.NoActionBar">
         <item name="android:statusBarColor">@color/surface</item>
         <item name="android:navigationBarColor">@color/container</item>
-
     </style>
 
 </resources>
